Map Added: Analysis 2

--- a/index-sentiment.html
+++ b/index-sentiment.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>TwitterGeo</title>
+		
 		
 		<!-- styles -->
 		<link rel="stylesheet" type="text/css" href="./style/main.css" />
@@ -13,7 +13,7 @@
 			@import url("http://polymaps.org/style.css");
 			
 			div.map {
-				width: 600px;
+				width: 45%;
 				height: 600px;
 				margin-right: 15px;
 				float: left;
@@ -348,8 +348,9 @@
 	</head>
 	
 	<body onload="init()">
-		<h1>Twitter Geo</h1>
-		<div id="overviewMap" class="map"></div>
-		<div id="focusMap" class="map"></div>
+		<center>
+		<div id="overviewMap" class="map" style="text-align:center"></div>
+		<div id="focusMap" class="map" style="text-align:center"></div>
+		</center>
 	</body>
 </html>
