--- a/analysis_2.html
+++ b/analysis_2.html
@@ -21,9 +21,10 @@ text {
 	<h1>This is Analysis 2 SENTIMENT:</h1>
 
 	<table border="1" style="width:100%;">
-		<tr height="600px">
-			<td>Big Map is going to be here soon</td>
-			<td>Samll Map is goingt to be here soon</td>     
+		<tr height="630px">
+			<td colspan="2"><iframe src="index-sentiment.html" style="width:100%; height:100%;">
+			Here You should be able to see the map, if not; Try another browser that supports iFrame.
+		</iframe></td>    
 		</tr>
 		<tr height ="600px">
 			<th rowspan="2" style="width:50%;"><svg id="test1" class="mypiechart"></th>
