--- a/analysis_4.html
+++ b/analysis_4.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+  
+</head>
 <meta charset="utf-8">
 <style type="text/css">
 
@@ -71,7 +74,7 @@ span {
         <SPAN STYLE="background-color: #3182bd">Japanese</SPAN>
       </td>
     </tr>
-    <tr>
+    <tr height = "500px">
       <td colspan=2>
         <form>
           <label><input type="radio" name="mode" value="size"> Size</label>
@@ -94,6 +97,7 @@ span {
     <script src="./lib/nvd3/src/models/stackedArea.js"></script>
     <script src="./lib/nvd3/src/models/stackedAreaChart.js"></script>
     <script src="./lib/nvd3/test/testScript.js"></script>
+    
     <script>
 
 
@@ -284,4 +288,5 @@ function stash(d) {
   d.x0 = d.x;
   d.dx0 = d.dx;
 }
+
 </script>
