--- a/analysis_2.html
+++ b/analysis_2.html
@@ -20,11 +20,17 @@ text {
 
 	<h1>This is Analysis 2 SENTIMENT:</h1>
 
+	<button type="button" onclick="dayFunction('pre')">Previous Day</button>
+	<button type="button" onclick="dayFunction('next')">Next Day</button>
+	<div id ="dayTime">Wed Sep 19 2013</div>
+
 	<table border="1" style="width:100%;">
 		<tr height="630px">
-			<td colspan="2"><iframe src="sentiment.html" style="width:100%; height:100%;">
-			Here You should be able to see the map, if not; Try another browser that supports iFrame.
-		</iframe></td>    
+			<td colspan="2">
+				<iframe src="sentiment.html" style="width:100%; height:100%;">
+				Here You should be able to see the map, if not; Try another browser that supports iFrame.
+			</iframe>
+		</td>    
 		</tr>
 		<tr height ="600px">
 			<th rowspan="2" style="width:50%;"><svg id="test1" class="mypiechart"></th>
@@ -44,7 +50,7 @@ text {
 	<script src="./lib/nvd3/src/utils.js"></script>
 	<script src="./js/sentimentalTotal.js"></script>
 	<script>
-
+	var ini = new Date(2013, 8, 19, 0, 0, 0, 0);
 	var testdata = [
 	{
 		key: "Positive",
@@ -61,6 +67,7 @@ text {
 	];
 
 	testdata = sentimentalTotal();
+
 	nv.addGraph(function() {
 		var width = 500,
 		height = 500;
@@ -83,4 +90,20 @@ text {
 
 		return chart;
 	});
+	  function dayFunction(var1)
+  { 
+  // 1379512800000 18th
+  if (ini.getTime() >= 1379512800000 ){
+    switch (var1){
+      case "pre":
+      ini.setTime(ini.getTime() - 24 * 60 * 60 *1000)
+      document.getElementById("dayTime").innerHTML = ini.toDateString();
+      break;
+      case "next":
+      ini.setTime(ini.getTime() + 24 * 60 * 60 *1000)
+      document.getElementById("dayTime").innerHTML = ini.toDateString();
+      break;
+    }
+  }
+}
 	</script>
