--- a/analysis_4.html
+++ b/analysis_4.html
@@ -50,25 +50,18 @@ span {
     </tr>
 
     <tr>
-
       <td>
         <SPAN STYLE="background-color: #fc9272">City</SPAN>
         <SPAN STYLE="background-color: #bcbddc">East</SPAN>
         <SPAN STYLE="background-color: #fdae6b">North East</SPAN>
-        <SPAN STYLE="background-color: #feb24c">The Forst</SPAN>
-        <SPAN STYLE="background-color: #fec44f">Hills District</SPAN>
+        <SPAN STYLE="background-color: #feb24c">Inner North</SPAN>
+        <SPAN STYLE="background-color: #fec44f">North</SPAN>
+
         <SPAN STYLE="background-color: #7fcdbb">Inner West</SPAN>
-        <SPAN STYLE="background-color: #addd8e">Macarthur</SPAN>
-        <SPAN STYLE="background-color: #fa9fb5">Northern Beaches</SPAN>
-        <SPAN STYLE="background-color: #c994c7">Lower North Shore</SPAN>
-        <SPAN STYLE="background-color: #bdbdbd">Upper North Shore</SPAN>
-        <SPAN STYLE="background-color: #a1d99b">"Northern Surburbs</SPAN>
-        <SPAN STYLE="background-color: #9ecae1">Sourth-eastern Sydney</SPAN>
-        <SPAN STYLE="background-color: #a6bddb">South-western Sydney</SPAN>
-        <SPAN STYLE="background-color: #a6bddb">Southern Sydney</SPAN>
-        <SPAN STYLE="background-color: #fdbb84">St George</SPAN>
-        <SPAN STYLE="background-color: #a8ddb5">Western Sydney</SPAN>
-        <SPAN STYLE="background-color: #9ebcda">Greater Western Sydney</SPAN>
+        <SPAN STYLE="background-color: #addd8e">South</SPAN>
+        <SPAN STYLE="background-color: #fa9fb5">West Central</SPAN>
+        <SPAN STYLE="background-color: #bdbdbd">South West</SPAN>
+        <SPAN STYLE="background-color: #a1d99b">North West</SPAN>
       </td>
       <td width = "50%">
         <SPAN STYLE="background-color: #f03b20">English</SPAN>
