language html in place

--- a/analysis_4.html
+++ b/analysis_4.html
@@ -14,7 +14,7 @@ span {
 <body>
   <h1>This is Analysis 4 LANGUAGES:</h1>
   <table border="1" style="width:100%;">
-    <tr height="600px">
+    <tr height="630px">
       <td>
         <select id="select">
           <option value="english" >English</option>
@@ -23,11 +23,11 @@ span {
           <option value="greek" >Greek</option>
           <option value="japanese" >Japanese</option>
         </select>
-        <br>
-        Big Map is going to be here soon
-      </td>
-      <td>Samll Map is goingt to be here soon</td>     
-    </tr>
+                        <td colspan="2"><iframe src="sentiment.html" style="width:100%; height:100%;">
+                        Here You should be able to see the map, if not; Try another browser that supports iFrame.
+                </iframe></td>
+                </tr>
+
     <tr>
       <td colspan=2>
         <h2>Time related analysis:</h2>
