--- a/analysis_4.html
+++ b/analysis_4.html
@@ -21,19 +21,22 @@ span {
   <button type="button" onclick="dayFunction('next')">Next Day</button>
   <div id ="dayTime">Wed Sep 19 2013</div>
 
+	<select id="select">
+          <option value="en" >English</option>
+          <option value="es">Spanish</option>
+          <option value="fa" >Persian</option>
+          <option value="ar" >Arabic</option>
+        </select>
+
   <table border="1" style="width:100%;">
     <tr height="630px">
-      <td>
-        <select id="select">
-          <option value="english" >English</option>
-          <option value="spanish">Spanish</option>
-          <option value="franch" >Franch</option>
-          <option value="greek" >Greek</option>
-          <option value="japanese" >Japanese</option>
-        </select>
-                        <td colspan="2"><iframe src="sentiment.html" style="width:100%; height:100%;">
+                        <td colspan="2">
+		<span id="mapContainer" style="height:100%;width:100%">
+		<iframe src="language.html?lang=en" style="width:100%; height:100%;">
                         Here You should be able to see the map, if not; Try another browser that supports iFrame.
-                </iframe></td>
+                </iframe>
+		</span>
+		</td>
                 </tr>
 
     <tr>
@@ -103,17 +106,17 @@ span {
       var index = selectDropDown.selectedIndex;
       var option = selectDropDown[index];
       switch (option.value){
-        case "english":
-        alert("eng");
+        case "en":
+	document.getElementById('mapContainer').innerHTML = " <iframe src=\"language.html?lang=en\" style=\"width:100%; height:100%;\"> Here You should be able to see the map, if not; Try another browser that supports iFrame. </iframe>";
         break;
-        case "spanish":
-        alert("span");
+        case "es":
+	document.getElementById('mapContainer').innerHTML = " <iframe src=\"language.html?lang=es\" style=\"width:100%; height:100%;\"> Here You should be able to see the map, if not; Try another browser that supports iFrame. </iframe>";
         break;
-        case "french":
-        alert("fre");
+        case "fa":
+        document.getElementById('mapContainer').innerHTML = " <iframe src=\"language.html?lang=fa\" style=\"width:100%; height:100%;\"> Here You should be able to see the map, if not; Try another browser that supports iFrame. </iframe>";
         break;
-        case "greek":
-        alert("gre");
+        case "ar":
+        document.getElementById('mapContainer').innerHTML = " <iframe src=\"language.html?lang=ar\" style=\"width:100%; height:100%;\"> Here You should be able to see the map, if not; Try another browser that supports iFrame. </iframe>";
         break;
       }
     }
