--- a/analysis_1.html
+++ b/analysis_1.html
@@ -35,9 +35,11 @@ text {
 
   <table border="1" width = 100%>
     <tr height="630px">
-      <td colspan="2"><iframe src="counting.html" style="width:100%; height:100%;">
+      <td colspan="2">
+        <iframe src="counting.html" style="width:100%; height:100%;">
         Here You should be able to see the map, if not; Try another browser that supports iFrame.
-      </iframe></td>
+      </iframe>
+    </td>
     </tr>
     <tr>
       <td colspan=2>
@@ -58,6 +60,7 @@ text {
   <script src="./lib/nvd3/src/models/scatter.js"></script>
   <script src="./lib/nvd3/src/models/line.js"></script>
   <script src="./lib/nvd3/src/models/cumulativeLineChart.js"></script>
+  <script src="./js/jquery/jquery.js"></script>
   <script type="text/javascript" src="js/counting.js"></script>
   <script>
 
