--- a/analysis_1.html
+++ b/analysis_1.html
@@ -33,10 +33,10 @@ text {
   <div id ="dayTime">Wed Sep 19 2013</div>
 
 
-  <table border="1" width = 100%>
+  <table border="0" width = 100%>
     <tr height="630px">
       <td colspan="2">
-        <iframe src="counting.html" style="width:100%; height:100%;">
+        <iframe src="counting.html" style="width:100%;height:100%;overflow:hidden;" scrolling="no" frameBorder="0">
         Here You should be able to see the map, if not; Try another browser that supports iFrame.
       </iframe>
     </td>
