--- a/analysis_2.html
+++ b/analysis_2.html
@@ -24,10 +24,10 @@ text {
 	<button type="button" onclick="dayFunction('next')">Next Day</button>
 	<div id ="dayTime">Wed Sep 19 2013</div>
 
-	<table border="1" style="width:100%;">
+	<table border="0" style="width:100%;">
 		<tr height="630px">
 			<td colspan="2">
-				<iframe src="sentiment.html" style="width:100%; height:100%;">
+				<iframe src="sentiment.html" style="width:100%; height:100%;" scrolling="no" frameBorder="0">
 				Here You should be able to see the map, if not; Try another browser that supports iFrame.
 			</iframe>
 		</td>    
