--- a/analysis_4.html
+++ b/analysis_4.html
@@ -63,11 +63,11 @@ span {
 	<option value="zh" >Chinese"</option>
         </select>
 
-  <table border="1" style="width:100%;">
+  <table border="0" style="width:100%;">
     <tr height="630px">
                         <td colspan="2">
 		<span id="mapContainer" style="height:100%;width:100%">
-		<iframe src="language.html?lang=en" style="width:100%; height:100%;">
+		<iframe src="language.html?lang=en" style="width:100%; height:100%;" scrolling="no" frameBorder="0">
                         Here You should be able to see the map, if not; Try another browser that supports iFrame.
                 </iframe>
 		</span>
