--- a/sentiment.html
+++ b/sentiment.html
@@ -109,8 +109,8 @@
 			
 			function load_json()
 			{
-				d3.json( dataURL, function( d )
-				{
+//				d3.json( dataURL, function( d )
+//				{
 					
 					d = sentimental();
 					console.log(d);
@@ -140,7 +140,7 @@
 					//draw_raw_points();
 					generate_hexgrid();
 					generate_hexgrid_representations();
-				});
+//				});
 			};
 			
 			function draw_raw_points()
