--- a/analysis_4.html
+++ b/analysis_4.html
@@ -17,57 +17,55 @@ span {
 <body>
   <h1>This is Analysis 4 LANGUAGES:</h1>
 
-  <button type="button" onclick="dayFunction('pre')">Previous Day</button>
-  <button type="button" onclick="dayFunction('next')">Next Day</button>
-  <div id ="dayTime">Wed Sep 19 2013</div>
-
-	<select id="select">
+<select id="select">
         <option value="ar" >Arabic</option>
-	<option value="bg" >Bulgarian</option>
-	<option value="bn" >Bengali</option>
-	<option value="da" >Danish</option>
-	<option value="de" >German</option>
-	<option value="el" >Greek</option>
-	<option value="en" selected="selected">English</option>
-	<option value="es" >Spanish</option>
-	<option value="et" >Estonian</option>
-	<option value="fa" >Farsi</option>
-	<option value="fi" >Finish</option>
-	<option value="fr" >French</option>
-	<option value="he" >Hebrew</option>
-	<option value="hi" >Hindi</option>
-	<option value="ht" >Haitian Creole</option>
-	<option value="hu" >Hungarian</option>
-	<option value="id" >Indonesian</option>
-	<option value="it" >Italian</option>
-	<option value="ja" >Japanese</option>
-	<option value="ko" >Korean</option>
-	<option value="lt" >Lithuanian</option>
-	<option value="lv" >Latvian</option>
-	<option value="ne" >Nepali</option>
-	<option value="nl" >Dutch</option>
-	<option value="no" >Norweigan</option>
-	<option value="pl" >Polish</option>
-	<option value="pt" >Portuguese</option>
-	<option value="ru" >Russian</option>
-	<option value="sk" >Slovak</option>
-	<option value="sl" >Slovenian</option>
-	<option value="sv" >Swedish</option>
-	<option value="ta" >Tamil</option>
-	<option value="th" >Thai</option>
-	<option value="tl" >Tagalog</option>
-	<option value="tr" >Turkish</option>
-	<option value="und">Undetermined</option>
-	<option value="ur" >Urdu</option>
-	<option value="vi" >Vietnamese</option>
-	<option value="zh" >Chinese"</option>
+  <option value="bg" >Bulgarian</option>
+  <option value="bn" >Bengali</option>
+  <option value="da" >Danish</option>
+  <option value="de" >German</option>
+  <option value="el" >Greek</option>
+  <option value="en" selected="selected">English</option>
+  <option value="es" >Spanish</option>
+  <option value="et" >Estonian</option>
+  <option value="fa" >Farsi</option>
+  <option value="fi" >Finish</option>
+  <option value="fr" >French</option>
+  <option value="he" >Hebrew</option>
+  <option value="hi" >Hindi</option>
+  <option value="ht" >Haitian Creole</option>
+  <option value="hu" >Hungarian</option>
+  <option value="id" >Indonesian</option>
+  <option value="it" >Italian</option>
+  <option value="ja" >Japanese</option>
+  <option value="ko" >Korean</option>
+  <option value="lt" >Lithuanian</option>
+  <option value="lv" >Latvian</option>
+  <option value="ne" >Nepali</option>
+  <option value="nl" >Dutch</option>
+  <option value="no" >Norweigan</option>
+  <option value="pl" >Polish</option>
+  <option value="pt" >Portuguese</option>
+  <option value="ru" >Russian</option>
+  <option value="sk" >Slovak</option>
+  <option value="sl" >Slovenian</option>
+  <option value="sv" >Swedish</option>
+  <option value="ta" >Tamil</option>
+  <option value="th" >Thai</option>
+  <option value="tl" >Tagalog</option>
+  <option value="tr" >Turkish</option>
+  <option value="und">Undetermined</option>
+  <option value="ur" >Urdu</option>
+  <option value="vi" >Vietnamese</option>
+  <option value="zh" >Chinese"</option>
         </select>
 
-  <table border="0" style="width:100%;">
+
+
+  <table border="1" style="width:100%;">
     <tr height="630px">
                         <td colspan="2">
 		<span id="mapContainer" style="height:100%;width:100%">
-		<iframe src="language.html?lang=en" style="width:100%; height:100%;" scrolling="no" frameBorder="0">
+		<iframe src="language.html?lang=en" style="width:100%; height:100%;">
                         Here You should be able to see the map, if not; Try another browser that supports iFrame.
                 </iframe>
 		</span>
@@ -77,7 +75,7 @@ span {
     <tr>
       <td colspan=2>
         <h2>Time related analysis:</h2>
-        <div class='chart full' id='chart1'><svg></svg></div>
+        <!-- <div class='chart full' id='chart1'><svg></svg></div> -->
       </td>
     </tr>
     <tr>
@@ -89,24 +87,35 @@ span {
 
     <tr>
       <td>
-        <SPAN STYLE="background-color: #fc9272">City</SPAN>
-        <SPAN STYLE="background-color: #bcbddc">East</SPAN>
-        <SPAN STYLE="background-color: #fdae6b">North East</SPAN>
-        <SPAN STYLE="background-color: #feb24c">Inner North</SPAN>
-        <SPAN STYLE="background-color: #fec44f">North</SPAN>
-
-        <SPAN STYLE="background-color: #7fcdbb">Inner West</SPAN>
-        <SPAN STYLE="background-color: #addd8e">South</SPAN>
-        <SPAN STYLE="background-color: #fa9fb5">West Central</SPAN>
-        <SPAN STYLE="background-color: #bdbdbd">South West</SPAN>
-        <SPAN STYLE="background-color: #a1d99b">North West</SPAN>
+        <SPAN STYLE="background-color: #B20000">City</SPAN>
+        <SPAN STYLE="background-color: #006600">East</SPAN>
+        <SPAN STYLE="background-color: #003399">North East</SPAN>
+        <SPAN STYLE="background-color: #009999">Inner North</SPAN>
+        <SPAN STYLE="background-color: #00CC66">North</SPAN>
+        <SPAN STYLE="background-color: #FFCC00">Inner West</SPAN>
+        <SPAN STYLE="background-color: #5A0000">South</SPAN>
+        <SPAN STYLE="background-color: #FF9933">West Central</SPAN>
+        <SPAN STYLE="background-color: #663300">South West</SPAN>
+        <SPAN STYLE="background-color: #FFFF66">North West</SPAN>
       </td>
       <td width = "50%">
-        <SPAN STYLE="background-color: #f03b20">English</SPAN>
-        <SPAN STYLE="background-color: #fee8c8">Spanish</SPAN>
-        <SPAN STYLE="background-color: #8856a7">Franch</SPAN>
-        <SPAN STYLE="background-color: #1c9099">Greek</SPAN>
-        <SPAN STYLE="background-color: #3182bd">Japanese</SPAN>
+        <SPAN STYLE="background-color: #660033">Indonesian</SPAN>
+        <SPAN STYLE="background-color: #0099CC">German</SPAN>
+        <SPAN STYLE="background-color: #4747B2">Spanish</SPAN>
+        <SPAN STYLE="background-color: #CC9900">Polish</SPAN>
+        <SPAN STYLE="background-color: #FFFF66">Tagalog</SPAN>
+        <SPAN STYLE="background-color: #6666FF">Dutch</SPAN>
+        <SPAN STYLE="background-color: #CC0000">Chinese</SPAN>
+        <SPAN STYLE="background-color: #669999">Japanese</SPAN>
+        <SPAN STYLE="background-color: ##FF9966">Vietnamese</SPAN>
+        <SPAN STYLE="background-color: #6600FF">French</SPAN>
+        <SPAN STYLE="background-color: #993300">Thai</SPAN>
+        <SPAN STYLE="background-color: #B2476B">Italian</SPAN>
+        <SPAN STYLE="background-color: #FF6600">Arabic</SPAN>
+        <SPAN STYLE="background-color: #999966">Estonian</SPAN>
+        <SPAN STYLE="background-color: #FF9933">Turkish</SPAN>
+        <SPAN STYLE="background-color: #666699">Korean</SPAN>
+        <SPAN STYLE="background-color: #FF9966">Persian</SPAN>
       </td>
     </tr>
     <tr height = "500px">
@@ -137,12 +146,11 @@ span {
     <script>
     var ini = new Date(2013, 8, 19, 0, 0, 0, 0);
 
-    var selectDropDown = document.getElementById('select');
+     var selectDropDown = document.getElementById('select');
     selectDropDown.onchange= function(e) {
       var index = selectDropDown.selectedIndex;
       var option = selectDropDown[index];
       document.getElementById('mapContainer').innerHTML = " <iframe src=\"language.html?lang="+option.value+"\" style=\"width:100%; height:100%;\"> Here You should be able to see the map, if not; Try another browser that supports iFrame. </iframe>";
-      
     }
 
     var histcatexplong = [ 
@@ -184,7 +192,7 @@ span {
     } 
     ];
 
-
+    histcatexplong = getLanguageTweetsPerDay();
     function arcTween(a) {
       var i = d3.interpolate({x: a.x0, dx: a.dx0}, a);
       return function(t) {
@@ -284,7 +292,7 @@ var arc = d3.svg.arc()
 .outerRadius(function(d) { return Math.sqrt(d.y + d.dy); });
 
 d3.json("./data/languages.json", function(error, root) {
-  root = getLanguageTweetsPerRegion()
+  root = getLanguageTweetsPerRegion();
   var path = svg.datum(root).selectAll("path")
   .data(partition.nodes)
   .enter().append("path")
