--- a/analysis_4.html
+++ b/analysis_4.html
@@ -65,7 +65,7 @@ span {
     <tr height="630px">
                         <td colspan="2">
 		<span id="mapContainer" style="height:100%;width:100%">
-		<iframe src="language.html?lang=en" style="width:100%; height:100%;">
+		<iframe src="language.html?lang=en" style="width:100%; height:100%;overflow:hidden;" scrolling="no">
                         Here You should be able to see the map, if not; Try another browser that supports iFrame.
                 </iframe>
 		</span>
@@ -80,7 +80,7 @@ span {
     </tr>
     <tr>
       <td colspan=2>
-        <h2>Reagion related analysis:</h2>
+        <h2>Region related analysis:</h2>
         <strong >TODO set color, and region size</strong>
       </td>
     </tr>
@@ -107,7 +107,7 @@ span {
         <SPAN STYLE="background-color: #6666FF">Dutch</SPAN>
         <SPAN STYLE="background-color: #CC0000">Chinese</SPAN>
         <SPAN STYLE="background-color: #669999">Japanese</SPAN>
-        <SPAN STYLE="background-color: ##FF9966">Vietnamese</SPAN>
+        <SPAN STYLE="background-color: #FF9966">Vietnamese</SPAN>
         <SPAN STYLE="background-color: #6600FF">French</SPAN>
         <SPAN STYLE="background-color: #993300">Thai</SPAN>
         <SPAN STYLE="background-color: #B2476B">Italian</SPAN>
