--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
           <p>Cesar Martinez D'Granda, Chalo Salvador </p>
           <p>Diana Carolina Barreto Arias </p>
           <p>Kaimin Huang,Veronica Vasquez </p>
+	  <img src="us.jpg" width="300px"></img>
           <h2>Instance Address: </h2>
           <p>CENTRAL      115.146.95.43</p>
           <p>DATAGETTER2  115.146.95.64</p>
