--- a/language.html
+++ b/language.html
@@ -108,9 +108,9 @@
 			
 			function load_json()
 			{
-//				d3.json( dataURL, function( d )
-//				{
-				//	alert(language);
+				d3.json( dataURL, function( d )
+				{
+					//alert(language);
 					d = getD3JSONLanguage(language);
 
 					var bounds = d.extent,
@@ -139,7 +139,7 @@
 					//draw_raw_points();
 					generate_hexgrid();
 					generate_hexgrid_representations();
-//				});
+				});
 			};
 			
 			function draw_raw_points()
